Closed Bug 1594540 Opened 5 years ago Closed 5 years ago

Tapping on "Continue with Google" on pinterest.com login doesn't show pop up

Categories

(Core :: Privacy: Anti-Tracking, defect)

Desktop
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla72
Tracking Status
firefox-esr68 --- unaffected
firefox70 --- unaffected
firefox71 --- unaffected
firefox72 --- verified

People

(Reporter: florencia.diciocco, Assigned: ehsan.akhgari)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

[Steps to reproduce]:
Open Firefox with a new profile
Go to pinterest.com
Press "Continue with Google"

[Expected result]:
Pop up requesting google credentials

[Actual result]:
Nothing happens

Here's the mozregression: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ae7777acefd86c1f54733837fd26685ef8cf5cd3&tochange=9c952f1da6fac18f70296d84e03b576c720d0448

Note: this only happens with a new profile. If I open nightly with a profile that was created for an older version, like release, the bug doesn't appear.

OS: Linux → All
Regressed by: 1594529

Does this happen due to ETP? I can't get this to work without disabling enhanced tracking protection in the URL shield.

Flags: needinfo?(fdiciocco)

Hi Jonathan,

It's as you say. When I disable the enhanced tracking protection I can see the pop up that allows me to log in with google. Nonetheless, even with the enhanced tracking protection activated, I can log in with Facebook. So there's a difference in behaviour between the buttons "continue with Facebook" and "continue with google".

Flags: needinfo?(fdiciocco)
Keywords: regression

This seems unrelated to the regression and not for DOM:Security either.

Component: DOM: Security → Privacy: Anti-Tracking
No longer regressed by: 1594529

I can reproduce the breakage, and I believe it is caused by the strict list. When I click "Continue with Google" I see uncaught exception: Object in the console.

(In reply to Steven Englehardt [:englehardt] from comment #4)

I can reproduce the breakage, and I believe it is caused by the strict list. When I click "Continue with Google" I see uncaught exception: Object in the console.

Does it go away if you disable the privacy.annotate_channels.strict_list.enabled pref?

Flags: needinfo?(senglehardt)
Attached image popup.png

Hi Ehsan,

By disabling the pref, I get the yellow bar warning saying that "Nightly prevented the site from opening a pop-up window". I allow the pop-up. The pop-up asks me for my credentials and when I type in my mail and password, the pop-up closes but Pinterest doesn't log in (screenshot). I have to press Continue with google a second time and this time I do log in.

Thanks for checking!

See Also: → 1596614
Assignee: nobody → ehsan

This is an off by one error in the fix to bug 1590922. :-(

Flags: needinfo?(senglehardt)
Keywords: regression
Regressed by: 1590922

(In reply to Florencia Di Ciocco from comment #2)

Hi Jonathan,

It's as you say. When I disable the enhanced tracking protection I can see the pop up that allows me to log in with google. Nonetheless, even with the enhanced tracking protection activated, I can log in with Facebook. So there's a difference in behaviour between the buttons "continue with Facebook" and "continue with google".

FWIW this bug should have still been caused a regression, even if ETP caused the breakage, given that ETP didn't use to cause this breakage before. In this case it probably wouldn't have mattered, and I ended up missing this comment, but just thought to mention that breakage that disabling ETP fixes should generally be filed as bugs that we'll try to fix. :-)

Right now this code is broken which causes the Google Accounts OAuth iframe to not get its partitioned localStorage object and the login flow breaks.

Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2ba8436feaf2 Fix the off-by-one error that breaks login on Pinterest.com; r=baku
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Attached video double continue.mp4

Hi Ehsan,

I've just verified this bug. Even though now I can see the pop up at once through the yellow bar, I still have to press "continue with google" twice for the login to kick in. Do you want me to close this bug as verified and open a new bug or would you prefer to continue working on this bug?

Regards, Flor.

Flags: needinfo?(ehsan)

(In reply to Florencia Di Ciocco from comment #14)

I've just verified this bug. Even though now I can see the pop up at once through the yellow bar, I still have to press "continue with google" twice for the login to kick in. Do you want me to close this bug as verified and open a new bug or would you prefer to continue working on this bug?

Thanks for testing. The yellow bar is the popup blocker interfering with the login process, which is an unrelated problem to what was happening here. I have already filed bug 1596614 to keep track of fixing that part of the issue, so I think we can mark this as verified now and continue the process of fixing this login flow in the other bug that's on file.

Status: RESOLVED → VERIFIED
Flags: needinfo?(ehsan)

(In reply to :ehsan akhgari from comment #15)

Thanks for testing. The yellow bar is the popup blocker interfering with the login process, which is an unrelated problem to what was happening here. I have already filed bug 1596614 to keep track of fixing that part of the issue, so I think we can mark this as verified now and continue the process of fixing this login flow in the other bug that's on file.

I agree. We've tested this on Ubuntu, Windows 7, Windows 10 and Mac 14.10 and works as described before.

Thanks for all.

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: