Bug 1594540 - Fix the off-by-one error that breaks login on Pinterest.com; r=baku

Differential Revision: https://phabricator.services.mozilla.com/D53770